Wallet Service Updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "include": ["src/**/*.ts" ],
-  "exclude": ["node_modules", "test", "dist"]
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "test",
+    "dist"
+  ]
 }
