--- a/render.yaml
+++ b/render.yaml
@@ -1,28 +1,24 @@
 databases:
-  -name: tb-wallet
-  databaseName: tb-wallet
-  databaseUser: postgres
-  databasePassword: postgres
-  databasePort: 5432
-  databaseHost: localhost
-  databaseType: postgres
+  - name: tb-wallet
+    databaseName: tb-wallet
+    user: mysite
 
-services: 
-  -type : pserv
-  name: pgbouncer
-  runtime: docker
-  plan: free
-  repo: https://github.com/render-oss/docker-pgbouncer
-  envVars:
-  - key: DATABASE_URL
-    fromDatabases: 
-      name: tb-wallet
-      property: connectionString
-  - key: POOL_MODE
-    value: transaction
-  - key: SERVER_RESET_QUERY
-    value: DISCARD ALL
-  - key: MAX_CLIENT_CONN
-    value: 500
-  - key: DEFAULT_POOL_SIZE
-    value: 50
+ services:
+ - type: pserv
+   name: pgbouncer
+   runtime: docker
+   plan: free
+   repo: https://github.com/render-oss/docker-pgbouncer
+   envVars:
+   - key: DATABASE_URL
+     fromDatabase:
+       name: tb-wallet
+       property: connectionString
+   - key: POOL_MODE
+     value: transaction
+   - key: SERVER_RESET_QUERY
+     value: DISCARD ALL
+   - key: MAX_CLIENT_CONN
+     value: 500
+   - key: DEFAULT_POOL_SIZE
+     value: 50
